src/test/deca/context/invalid/created/objet/appel_meth.deca
// description :
//      appel de la methode incorrecte 
// Resultat
//      Ligne 17 : appel de methode incorrecte
class A {
    int x ;
    int getX() {
        return x ;
    }
    void setX(int x) {
        this.x = x ;
    }
}

{
    A a = new A() ;
    setX() ;
    println("a.getX() = ", a.getX()) ;
}